[gd_scene load_steps=13 format=3 uid="uid://cjalvbd6hgwlg"]

[ext_resource type="Script" uid="uid://d17jqtova4n86" path="res://scripts/repair_history.gd" id="1_o05mv"]
[ext_resource type="PackedScene" uid="uid://cjb4aanhx1is8" path="res://scenes/Entry_List.tscn" id="2_0v3l3"]
[ext_resource type="LabelSettings" uid="uid://13d1fvmgjm6t" path="res://themes/dark_text.tres" id="2_6073s"]
[ext_resource type="Shader" uid="uid://dp12bvmc0cc0j" path="res://shaders/self_mod_add.gdshader" id="3_6073s"]
[ext_resource type="Theme" uid="uid://cktuqhdeum3lj" path="res://themes/buttons.tres" id="4_ubd41"]
[ext_resource type="PackedScene" uid="uid://c3wkses7xm2wa" path="res://scenes/bg.tscn" id="5_0v3l3"]
[ext_resource type="Theme" uid="uid://dfi8u0ogiiqmk" path="res://themes/spinbox.tres" id="7_ubd41"]
[ext_resource type="Theme" uid="uid://c5qxkakmf8ipp" path="res://themes/text_edit.tres" id="8_boaa5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_24e4x"]
shader = ExtResource("3_6073s")
shader_parameter/mod_color = Color(0.2044, 0.73, 0.37084, 1)

[sub_resource type="Animation" id="Animation_0v3l3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/Input_Window_Insert_Row/MarginContainer/VBoxContainer/Input_Insert:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/Input_Window/MarginContainer/Input:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_o05mv"]
resource_name = "missing_comment"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/Input_Window_Insert_Row/MarginContainer/VBoxContainer/Input_Insert:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.175, 0.35, 0.525, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/Input_Window/MarginContainer/Input:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.00743389, 0.175, 0.35, 0.525, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6073s"]
_data = {
&"RESET": SubResource("Animation_0v3l3"),
&"missing_comment": SubResource("Animation_o05mv")
}

[node name="Repair_History" type="Window"]
auto_translate_mode = 1
gui_embed_subwindows = true
title = "Repair History"
initial_position = 1
size = Vector2i(1110, 386)
visible = false
wrap_controls = true
always_on_top = true
force_native = true
max_size = Vector2i(1280, 386)
keep_title_visible = true
content_scale_aspect = 2
theme_override_colors/title_outline_modulate = Color(0, 0, 0, 1)
theme_override_constants/title_outline_size = 2
script = ExtResource("1_o05mv")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Last_Service_Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "00 Weeks, 00 Days, 00 Hours Since Last Service"
label_settings = ExtResource("2_6073s")
horizontal_alignment = 1

[node name="Divider" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "|"
label_settings = ExtResource("2_6073s")
horizontal_alignment = 1

[node name="Maintenance_Schedule" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Maintenance Schedule: 000 Days"
label_settings = ExtResource("2_6073s")
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 250)
layout_direction = 2
layout_mode = 2
size_flags_vertical = 0
horizontal_scroll_mode = 4
vertical_scroll_mode = 3

[node name="Entry_List" parent="MarginContainer/VBoxContainer/ScrollContainer" instance=ExtResource("2_0v3l3")]
layout_mode = 2
size_flags_horizontal = 6

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 25
alignment = 1

[node name="Update_Column" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
material = SubResource("ShaderMaterial_24e4x")
custom_minimum_size = Vector2(110, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
tooltip_text = "Move up a floor."
focus_mode = 0
theme = ExtResource("4_ubd41")
text = "Update Column"

[node name="Delete_Row" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
material = SubResource("ShaderMaterial_24e4x")
custom_minimum_size = Vector2(110, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
tooltip_text = "Move up a floor."
focus_mode = 0
theme = ExtResource("4_ubd41")
text = "Delete Row"

[node name="Insert_Row" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
material = SubResource("ShaderMaterial_24e4x")
custom_minimum_size = Vector2(110, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
tooltip_text = "Move up a floor."
focus_mode = 0
theme = ExtResource("4_ubd41")
text = "Insert Row"

[node name="Input_Window" type="Window" parent="MarginContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
gui_embed_subwindows = true
title = "Insert New Comment"
initial_position = 1
size = Vector2i(300, 55)
visible = false
always_on_top = true
force_native = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Input_Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Input" type="TextEdit" parent="MarginContainer/Input_Window/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 45)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("8_boaa5")
placeholder_text = " Insert New Comment"

[node name="Submit" type="Button" parent="MarginContainer/Input_Window/MarginContainer"]
material = SubResource("ShaderMaterial_24e4x")
custom_minimum_size = Vector2(85, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
tooltip_text = "Move up a floor."
focus_mode = 0
theme = ExtResource("4_ubd41")
text = "Submit
"

[node name="BG" parent="MarginContainer/Input_Window" instance=ExtResource("5_0v3l3")]

[node name="Input_Window_Date" type="Window" parent="MarginContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
gui_embed_subwindows = true
title = "Insert New Date"
initial_position = 1
size = Vector2i(500, 55)
visible = false
always_on_top = true
force_native = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Input_Window_Date"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Input_Window_Date/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DD" type="SpinBox" parent="MarginContainer/Input_Window_Date/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("7_ubd41")
min_value = 1.0
max_value = 31.0
value = 1.0
rounded = true

[node name="MM" type="SpinBox" parent="MarginContainer/Input_Window_Date/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 45)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("7_ubd41")
min_value = 1.0
max_value = 12.0
value = 1.0

[node name="YYYY" type="SpinBox" parent="MarginContainer/Input_Window_Date/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 45)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("7_ubd41")
min_value = 1900.0
max_value = 10000.0
value = 1900.0

[node name="Current_Date" type="CheckBox" parent="MarginContainer/Input_Window_Date/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme = ExtResource("4_ubd41")
text = "Current Date"

[node name="Submit_Date" type="Button" parent="MarginContainer/Input_Window_Date/MarginContainer"]
material = SubResource("ShaderMaterial_24e4x")
custom_minimum_size = Vector2(85, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
tooltip_text = "Move up a floor."
focus_mode = 0
theme = ExtResource("4_ubd41")
text = "Submit
"

[node name="BG" parent="MarginContainer/Input_Window_Date" instance=ExtResource("5_0v3l3")]

[node name="Input_Window_Time" type="Window" parent="MarginContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
gui_embed_subwindows = true
title = "Insert New Time"
initial_position = 1
size = Vector2i(415, 55)
visible = false
always_on_top = true
force_native = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Input_Window_Time"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Input_Window_Time/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HH" type="SpinBox" parent="MarginContainer/Input_Window_Time/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("7_ubd41")
max_value = 32.0
rounded = true

[node name="MIN" type="SpinBox" parent="MarginContainer/Input_Window_Time/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 45)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("7_ubd41")
max_value = 12.0

[node name="Current_Time" type="CheckBox" parent="MarginContainer/Input_Window_Time/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme = ExtResource("4_ubd41")
text = "Current Time"

[node name="Submit_Time" type="Button" parent="MarginContainer/Input_Window_Time/MarginContainer"]
material = SubResource("ShaderMaterial_24e4x")
custom_minimum_size = Vector2(85, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
tooltip_text = "Move up a floor."
focus_mode = 0
theme = ExtResource("4_ubd41")
text = "Submit
"

[node name="BG" parent="MarginContainer/Input_Window_Time" instance=ExtResource("5_0v3l3")]

[node name="Input_Window_Insert_Row" type="Window" parent="MarginContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
gui_embed_subwindows = true
title = "Insert New Data"
initial_position = 1
size = Vector2i(300, 385)
visible = false
always_on_top = true
force_native = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Input_Window_Insert_Row"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Input_Window_Insert_Row/MarginContainer"]
layout_mode = 2

[node name="Date" type="HBoxContainer" parent="MarginContainer/Input_Window_Insert_Row/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="DD_Insert" type="SpinBox" parent="MarginContainer/Input_Window_Insert_Row/MarginContainer/VBoxContainer/Date"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("7_ubd41")
min_value = 1.0
max_value = 31.0
value = 1.0
rounded = true
prefix = "DD"

[node name="MM_Insert" type="SpinBox" parent="MarginContainer/Input_Window_Insert_Row/MarginContainer/VBoxContainer/Date"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 45)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("7_ubd41")
min_value = 1.0
max_value = 12.0
value = 1.0
prefix = "MM"

[node name="YYYY_Insert" type="SpinBox" parent="MarginContainer/Input_Window_Insert_Row/MarginContainer/VBoxContainer/Date"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 45)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("7_ubd41")
min_value = 1900.0
max_value = 10000.0
value = 1900.0
prefix = "YYYY"

[node name="Time" type="HBoxContainer" parent="MarginContainer/Input_Window_Insert_Row/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HH_Insert" type="SpinBox" parent="MarginContainer/Input_Window_Insert_Row/MarginContainer/VBoxContainer/Time"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("7_ubd41")
max_value = 32.0
rounded = true
prefix = "HH"
select_all_on_focus = true

[node name="MIN_Insert" type="SpinBox" parent="MarginContainer/Input_Window_Insert_Row/MarginContainer/VBoxContainer/Time"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 45)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("7_ubd41")
max_value = 12.0
prefix = "MM"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Input_Window_Insert_Row/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Current_Date_Insert" type="CheckBox" parent="MarginContainer/Input_Window_Insert_Row/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme = ExtResource("4_ubd41")
text = "Current Date"

[node name="Current_Time_Insert" type="CheckBox" parent="MarginContainer/Input_Window_Insert_Row/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme = ExtResource("4_ubd41")
text = "Current Time"

[node name="Input_Insert" type="TextEdit" parent="MarginContainer/Input_Window_Insert_Row/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(290, 205)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("8_boaa5")
placeholder_text = " Comment"
wrap_mode = 1
scroll_fit_content_width = true

[node name="Submit_Insert_Row" type="Button" parent="MarginContainer/Input_Window_Insert_Row/MarginContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_24e4x")
custom_minimum_size = Vector2(85, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Move up a floor."
focus_mode = 0
theme = ExtResource("4_ubd41")
text = "Submit
"

[node name="BG" parent="MarginContainer/Input_Window_Insert_Row" instance=ExtResource("5_0v3l3")]

[node name="ConfirmDelete" type="ConfirmationDialog" parent="MarginContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
gui_embed_subwindows = true
title = "Delete Row"
initial_position = 1
size = Vector2i(337, 100)
force_native = true
theme = ExtResource("4_ubd41")
ok_button_text = "Yes"
dialog_text = "Are you sure you want to delete this row?"
cancel_button_text = "No"

[node name="BG" parent="." instance=ExtResource("5_0v3l3")]
color = Color(0.9405, 0.948417, 0.95, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_6073s")
}

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer/Update_Column" to="." method="_on_update_column_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer/Delete_Row" to="." method="_on_delete_row_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer/Insert_Row" to="." method="_on_insert_row_button_up"]
[connection signal="close_requested" from="MarginContainer/Input_Window" to="." method="_on_input_window_close_requested"]
[connection signal="button_down" from="MarginContainer/Input_Window/MarginContainer/Submit" to="." method="_on_submit_button_down"]
[connection signal="close_requested" from="MarginContainer/Input_Window_Date" to="." method="_on_input_window_date_close_requested"]
[connection signal="button_down" from="MarginContainer/Input_Window_Date/MarginContainer/Submit_Date" to="." method="_on_submit_date_button_down"]
[connection signal="close_requested" from="MarginContainer/Input_Window_Time" to="." method="_on_input_window_time_close_requested"]
[connection signal="button_down" from="MarginContainer/Input_Window_Time/MarginContainer/Submit_Time" to="." method="_on_submit_time_button_down"]
[connection signal="close_requested" from="MarginContainer/Input_Window_Insert_Row" to="." method="_on_input_window_insert_row_close_requested"]
[connection signal="button_down" from="MarginContainer/Input_Window_Insert_Row/MarginContainer/VBoxContainer/Submit_Insert_Row" to="." method="_on_submit_insert_row_button_down"]
[connection signal="canceled" from="MarginContainer/ConfirmDelete" to="." method="_on_confirm_delete_canceled"]
[connection signal="confirmed" from="MarginContainer/ConfirmDelete" to="." method="_on_confirm_delete_confirmed"]
